<?xml version="1.0"?>
<package format="2">

	<name>dh_gazebo_plugins</name>
	<version>0.0.0</version>
	<description>TODO</description>
	<maintainer email="masa0u0masa1215@gmail.com">Masayoshi Dohi</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>

	<depend>dh_common_msgs</depend>

</package>
